--- a/PhDProposal 01/Chp1-Intro/Intro.tex
+++ b/PhDProposal 01/Chp1-Intro/Intro.tex
@@ -4,7 +4,21 @@
 
 The complexity of the ocean and its vast ecosystems has fascinated scientists to this day and most likely will continue to do so far into the future. Myriad life forms are embedded in a matrix so far removed from our mostly dry existence on top the earth’s crust. In the ocean, life moves in dilution, and the equivalents of forests and grasslands are hard to spot unless the concentration of tiny phytoplankton is so large, that deep blue turns into a milky green.
 
-The term phytoplankton refers to microscopic marine photosynthetic organisms. These microorganisms form the basis of the oceanic food web and are primary producers of planetary scale, contributing roughly half of the oxygen in our atmosphere through photosynthesis \citep{Field2009}. Phytoplankton consists of mostly single-celled organisms, prokaryotes and eukaryotes from a highly diverse evolutionary background \citep{Falkowski2004a}. This large phylogenetic diversity is accompanied by a remarkable range of survival strategies, biogeochemical roles, shapes and sizes within the polyphyletic phytoplankton (see Figure \ref{FinkelPhySizeRange} for a size comparison). The emergence of such a large variety of organisms and the mechanisms sustaining their persistence has been one of the key questions in phytoplankton ecology over the last 50 years \citep{Hutchinson1961} % EST: elaborate on Hutchinson's paradox
+The term phytoplankton refers to microscopic marine photosynthetic organisms. These microorganisms form the basis of the oceanic food web and are primary producers of planetary scale, contributing roughly half of the oxygen in our atmosphere through photosynthesis \citep{Field2009}. Phytoplankton consists of mostly single-celled organisms, prokaryotes and eukaryotes from a highly diverse evolutionary background \citep{Falkowski2004a}. This large phylogenetic diversity is accompanied by a remarkable range of survival strategies, biogeochemical roles, shapes and sizes within the polyphyletic phytoplankton (see Figure \ref{FinkelPhySizeRange} for a size comparison). The emergence of such a large variety of organisms and the mechanisms sustaining their persistence has been one of the key questions in phytoplankton ecology over the last 50 years. % EST: elaborate on Hutchinson's paradox
+
+Most phytoplankton species rely on a few nutrients, co2 and light for growth
+ Liebig's law, nutrient competition
+in sea water they are relatively well mixed and in direct competition!
+
+In the liquid medium of sea water it was expected that competitive species would easily replace others through competitive exclusion, however this clearly was not the case \citep{Hutchinson1961}.   
+Hypotheses explaining the paradox are:  
+- grazing/predation/viruse
+- nonequilibrium conditions/ time scales
+- mutualistic interactions
+- competitive ability (multiple nuts, different affinities)
+- emergent chaos
+
+
 
 \begin{figure}
 \centering
@@ -13,17 +27,34 @@ The term phytoplankton refers to microscopic marine photosynthetic organisms. Th
 \label{FinkelPhySizeRange}
 \end{figure}
 
+In fact it is these forces that make the environment for phytoplankton quite variable!
 
-The distribution of phytoplankton is driven by the complex physical forces that govern ocean currents and the chemistry of the bodies of water they move. The key components are macronutrients (e.g. nitrogen \& phosphorus) and micronutrients (e.g. iron \& cobalt) welling up from the deeper ocean or flushed in from continental sources. Wherever there are sufficient nutrients available within the euphotic zone, 
-% EST: here confusing the Euphotic depth definition with Euphotic zone 
-the depth where photosynthetically available radiation (PAR) is 1\% of the surface value, planktonic life begins to thrive. Planktonic life is further bound by the mixed layer depth (MLD), which describes the depth of the relatively homogenous surface layer maintained by wind stress and surface heat fluxes in which the largely immotile phytoplankton can grow. The biomass produced by phytoplankton is mostly consumed by higher trophic levels and either assimilated or excreted. Another large portion of the phytoplankton experiences natural mortality and viral lysis. Microbial degradation drives remineralization within the euphotic zone, which fuels regenerated production \citep{Eppley1979}
+The distribution of phytoplankton is driven by the complex physical forces that govern ocean currents and the chemistry of the bodies of water they move. The key components are macronutrients (e.g. nitrogen \& phosphorus) and micronutrients (e.g. iron \& cobalt) welling up from the deeper ocean or flushed in from continental sources. Wherever there are sufficient nutrients available within the euphotic zone, from the surface to the depth where photosynthetically available radiation (PAR) is 1\% of the surface value, planktonic life begins to thrive. Planktonic life is further bound by the mixed layer depth (MLD), which describes the depth of the relatively homogenous surface layer of the ocean maintained by wind stress and surface heat fluxes.
+ 
+If the MLD is above the euphotic depth most phytoplankton species can spend their life actively photosynthesizing, capturing carbon dioxide and nutrients to grow and divide. 
+
+The biomass produced by phytoplankton is mostly consumed by higher trophic levels and either assimilated or excreted. 
+-feeding herbivorous zooplankton, carnivorous zooplankton, larvae, fish, mammals, fisheries and humans!
+
+Phytoplankton growth indirectly feeds a considerable part of earth’s population through fisheries \citep{Stock2017} 
+
+Another large portion of the phytoplankton experiences natural mortality and viral lysis. Microbial degradation drives remineralization within the euphotic zone, which fuels regenerated production \citep{Eppley1979}
 
 A small fraction of biomass sinks out of the photic layer as fecal or detrital matter to the deeper ocean and an even smaller fraction reaches the sea floor as sediment (roughly 1 \%) and remains there over geological times \citep{Honjo2008}. This process has been termed the biological carbon pump. 
+
+
 % I think it is too brief, and it reads more like just a name dropping terms, without provide more substance and more depth particularly looking into the literature and elaborating what is basis of our knowledge on such important topics.
+
 Carbon sequestered this way is removed from the ocean-atmosphere system for potentially millions of years. Given the projected rise of atmospheric CO$_2$ levels, it is of grave importance to understand how changes in the phytoplankton community at the surface, driven by anthropogenic stressors and climate change, will affect the carbon burial potential of oceanic ecosystems. 
 
 %Given the brevity of the description of the carbon pump and its link to phytoplankton ecology and planetary climate regulation and  the fact that it read like you jumped into a new topic a bit I think it is better make new paragraph and elaborate better the transition between paragraphs
-Ecosystems along continental margins provide a particularly productive habitat, with only 10\% of total ocean surface area covered by continental margins, but 10-15\% of marine primary production and more than 40\% of carbon export to the seabed occurring along coastal lines \citep{Yool2001,Muller-Karger2005}. Phytoplankton growth indirectly feeds a considerable part of earth’s population through fisheries \citep{Stock2017} and even shapes the elemental composition of oceanic water itself \citep{Redfield1958}. Studies have both reported a global declining trend in marine primary production \citep{Boyce2012} and increasing trends %of what?
+Ecosystems along continental margins provide a particularly productive habitat, with only 10\% of total ocean surface area covered by continental margins, but 10-15\% of marine primary production and more than 40\% of carbon export to the seabed occurring along coastal lines \citep{Yool2001,Muller-Karger2005}. 
+
+
+even shapes the elemental composition of oceanic water itself \citep{Redfield1958}. 
+
+
+Studies have both reported a global declining trend in marine primary production \citep{Boyce2012} and increasing trends %of what?
 in long-term ocean time series \citep{Chavez2011a}.
 % EST: Poorly made the case for why it is important to look at Phyto Diversity!
 In order to answer questions of how phytoplankton will respond to a changing climate it is necessary to look the diverse phytoplankton community in greater detail. 
