--- a/CaRiaco/RegimeShiftNotebooks/ExtractModelFORCING2.R.ipynb
+++ b/CaRiaco/RegimeShiftNotebooks/ExtractModelFORCING2.R.ipynb
@@ -414,7 +414,7 @@
     "        group_by(month) %>% \n",
     "        summarise(\n",
     "            dyear = max(dyear),\n",
-    "            MLD2015mean = mean(MLD2015),\n",
+    "            MLD2015mean = mean(MLD2015),a\n",
     "            MLD2015median = median(MLD2015)\n",
     "        )\n",
     "\n",
@@ -3032,9 +3032,9 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.5.1"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
