NCDF file creation

--- a/CaRiaco/ToyingAround/Loopy/UniquenessErnesto.ipynb
+++ b/CaRiaco/ToyingAround/Loopy/UniquenessErnesto.ipynb
@@ -199,9 +199,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     a X2 X3\n",
+      "Sp1  1  0  0\n",
+      "Sp2  1  0  0\n",
+      "Sp3  1  1  0\n",
+      "Sp4  0  1  1\n",
+      "Sp5  1  0  1\n",
+      "Sp6  1  1  1\n",
+      "Sp7  1  0  0\n",
+      "Sp8  1  1  1\n",
+      "Sp9  0  0  1\n",
+      "Sp10 0  0  1\n",
+      "     a X1 X3\n",
+      "Sp1  0  1  0\n",
+      "Sp2  0  1  0\n",
+      "Sp3  1  1  0\n",
+      "Sp4  1  0  1\n",
+      "Sp5  0  1  1\n",
+      "Sp6  1  1  1\n",
+      "Sp7  0  1  0\n",
+      "Sp8  1  1  1\n",
+      "Sp9  0  0  1\n",
+      "Sp10 0  0  1\n",
+      "     a X1 X2\n",
+      "Sp1  0  1  0\n",
+      "Sp2  0  1  0\n",
+      "Sp3  0  1  1\n",
+      "Sp4  1  0  1\n",
+      "Sp5  1  1  0\n",
+      "Sp6  1  1  1\n",
+      "Sp7  0  1  0\n",
+      "Sp8  1  1  1\n",
+      "Sp9  1  0  0\n",
+      "Sp10 1  0  0\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -213,8 +252,8 @@
        "</thead>\n",
        "<tbody>\n",
        "\t<tr><td>2</td><td>3</td><td>1.5</td></tr>\n",
-       "\t<tr><td>2</td><td>3</td><td>1.5</td></tr>\n",
-       "\t<tr><td>2</td><td>3</td><td>1.5</td></tr>\n",
+       "\t<tr><td>2</td><td>0</td><td>0.0</td></tr>\n",
+       "\t<tr><td>2</td><td>2</td><td>1.0</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -225,8 +264,8 @@
        " <int> & <int> & <dbl>\\\\\n",
        "\\hline\n",
        "\t 2 & 3 & 1.5\\\\\n",
-       "\t 2 & 3 & 1.5\\\\\n",
-       "\t 2 & 3 & 1.5\\\\\n",
+       "\t 2 & 0 & 0.0\\\\\n",
+       "\t 2 & 2 & 1.0\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -236,15 +275,15 @@
        "| m &lt;int&gt; | e1 &lt;int&gt; | e1_m &lt;dbl&gt; |\n",
        "|---|---|---|\n",
        "| 2 | 3 | 1.5 |\n",
-       "| 2 | 3 | 1.5 |\n",
-       "| 2 | 3 | 1.5 |\n",
+       "| 2 | 0 | 0.0 |\n",
+       "| 2 | 2 | 1.0 |\n",
        "\n"
       ],
       "text/plain": [
        "  m e1 e1_m\n",
        "1 2 3  1.5 \n",
-       "2 2 3  1.5 \n",
-       "3 2 3  1.5 "
+       "2 2 0  0.0 \n",
+       "3 2 2  1.0 "
       ]
      },
      "metadata": {},
@@ -264,10 +303,14 @@
     "for (i in 1:numSites){\n",
     "    reargX <- cbind(x[i],x[-i])\n",
     "    \n",
+    "    names(reargX)[1]<- \"a\"\n",
+    "    \n",
+    "    print(reargX)\n",
+    "    \n",
     "    calc <- reargX %>%\n",
     "        mutate(SUM = rowSums(.)) %>%\n",
     "        rowwise() %>%\n",
-    "        mutate(uniqueX = X1>0 & SUM==1, AllPresent = SUM==numSites) %>%\n",
+    "        mutate(uniqueX = a >0 & SUM==1, AllPresent = SUM==numSites) %>%\n",
     "        ungroup() %>%\n",
     "        summarise(m = sum(AllPresent), e1 = sum(uniqueX) ,e1_m = e1/m)\n",
     "    \n",
