towards FULL WOA2018 analysis

--- a/CaRiaco/SCRIPPS/MODEL_DATA/FINAL_TEMP_NCDF_GEN.ipynb
+++ b/CaRiaco/SCRIPPS/MODEL_DATA/FINAL_TEMP_NCDF_GEN.ipynb
@@ -41,7 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +239,7 @@
     "rootgrp.source = \"WOA2018 + DeBoyer Montague et al. 2004 MLD\"\n",
     "\n",
     "lats = np.arange(-89.5,90.5,1)\n",
-    "lons = np.arange(-180,180,1)\n",
+    "lons = np.arange(-179.5,180.5,1)\n",
     "times = np.arange(1,13,1)\n",
     "\n",
     "var = rootgrp.createDimension(\"var\", None)\n",
@@ -258,8 +265,8 @@
     "month[:] = times\n",
     "\n",
     "for i in range(len(lats)):\n",
-    "    print(lats[i])\n",
     "    for j in range(len(lons)):\n",
+    "        print(lats[i],lons[j])\n",
     "        MAMLD = MeanAboveMLDatLoc(i,j)\n",
     "        for k in range(len(times)):\n",
     "            if MAMLD.empty == True:\n",
