closer to ncdf creation

--- a/CaRiaco/SCRIPPS/MODEL_DATA/Final_ALLWOA2018_repackage.ipynb
+++ b/CaRiaco/SCRIPPS/MODEL_DATA/Final_ALLWOA2018_repackage.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,11 +310,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#MLD = MLD_at_latlon(40,-20,mldX).reset_index()"
+    "a = MLD_at_latlon(40,-20,mldX).reset_index()\n",
+    "\n",
+    "a.to_csv('../MLD_40minus20.csv')"
    ]
   },
   {
@@ -430,122 +432,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Month</th>\n",
-       "      <th>Conc</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2.208213</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2.366489</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2.832347</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1.250642</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1.058698</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>0.744878</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>0.905918</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>0.574063</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>1.415283</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10</td>\n",
-       "      <td>1.016013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>11</td>\n",
-       "      <td>1.891410</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>12</td>\n",
-       "      <td>2.602339</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Month      Conc\n",
-       "0       1  2.208213\n",
-       "1       2  2.366489\n",
-       "2       3  2.832347\n",
-       "3       4  1.250642\n",
-       "4       5  1.058698\n",
-       "5       6  0.744878\n",
-       "6       7  0.905918\n",
-       "7       8  0.574063\n",
-       "8       9  1.415283\n",
-       "9      10  1.016013\n",
-       "10     11  1.891410\n",
-       "11     12  2.602339"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ReturnAnalyzedWOAdata(WOAsilicate,40,-20,WOAvar='Si')"
+    "a = ReturnAnalyzedWOAdata(WOAtemp,40,-20,WOAvar='Temp')\n",
+    "a.to_csv('../Tmld_40minus20.csv')"
    ]
   },
   {
@@ -984,9 +876,9 @@
     "rootgrp = Dataset('01_netcdf4.nc', 'w', format='NETCDF4')\n",
     "\n",
     "import time\n",
-    "rootgrp.description = 'WOA 2018 Temperature averaged above MLD'\n",
+    "rootgrp.description = 'WOA 2018 Data analyzed with MLD climatology'\n",
     "rootgrp.history = \"Created \" + time.ctime(time.time())\n",
-    "rootgrp.source = \"WOA2018 + DeBoyer Montague et al. 2004 MLD\"\n",
+    "rootgrp.source = \"WOA2018 + DeBoyer Montague et al. 2004\"\n",
     "\n",
     "lats = np.arange(-89.5,90.5,1)\n",
     "lons = np.arange(-179.5,180.5,1)\n",
