--- a/CaRiaco/SCRIPPS/MODEL_DATA/FINALLYspeeditUPMAN.ipynb
+++ b/CaRiaco/SCRIPPS/MODEL_DATA/FINALLYspeeditUPMAN.ipynb
@@ -23,187 +23,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def find_nearest(array, value):\n",
-    "    \"\"\"this function returns the closest value within an array to the given value\"\"\"\n",
-    "    array = np.asarray(array)\n",
-    "    idx = (np.abs(array - value)).argmin()\n",
-    "    return array[idx]\n",
-    "\n",
-    "def filterNearestMLD(lat,lon):\n",
-    "    \"\"\"this function checks 1. if lat lon point is in the ocean, then 2. returns MLD climatology\"\"\"\n",
-    "    lsx = nclandseafile.sel(lat=40,lon=-20, method='nearest')['watermask'].values\n",
-    "\n",
-    "    if lsx != 1:\n",
-    "        return np.array([])\n",
-    "    else:\n",
-    "        idx = np.where((nclats == find_nearest(nclat,lat)) & (nclons == find_nearest(nclon,lon)))\n",
-    "        return ncmld[idx]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def filterNearestMLD2(lat,lon):\n",
-    "    \"\"\"this function checks 1. if lat lon point is in the ocean, then 2. returns MLD climatology\"\"\"\n",
-    "    lsx = nclandseafile.sel(lat=40,lon=-20, method='nearest')['watermask'].values\n",
-    "\n",
-    "    if lsx != 1:\n",
-    "        return np.array([])\n",
-    "    else:\n",
-    "        idx = np.where((nclats == find_nearest(nclat,lat)) & (nclons == find_nearest(nclon,lon)))\n",
-    "        return ncmld[idx]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nclandseafile = nclandseafile.persist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.72 ms ± 72.6 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%timeit filterNearestMLD(40,-20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def readWOAdata(filepath,variable):\n",
-    "    TempNCDFfiles = glob.glob(filepath, recursive=True)\n",
-    "    WOAfile = xr.open_mfdataset(TempNCDFfiles,combine='by_coords',decode_times=False, parallel=True)\n",
-    "    WOAdat = WOAfile.sel(nbounds=0)\n",
-    "    return WOAdat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def filterNearestWOA(lat,lon):\n",
-    "    \"\"\"this function returns nearest WOA data at specific lat/lon\"\"\"\n",
-    "    idx2 = np.where((WOAlats == find_nearest(WOAlat,lat)) & (WOAlons == find_nearest(WOAlon,lon)))\n",
-    "    return np.reshape(WOAvar[idx2],(len(WOAtime),len(WOAdep)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getTempAboveMLD(lat,lon):\n",
-    "    MLDx1 = filterNearestMLD(lat,lon)\n",
-    "    WOAx1 = filterNearestWOA(lat,lon)\n",
-    "    if MLDx1.size==0:\n",
-    "        return [np.nan for i in range(12)]\n",
-    "    \n",
-    "    a = []\n",
-    "    for i in range(0,12):\n",
-    "        if MLDx1[i]>1500:\n",
-    "            MLDx1[i] = 1500\n",
-    "        f_out = interp1d(WOAdep, WOAx1[i])\n",
-    "        x = np.arange(0,MLDx1[i])\n",
-    "        a.append(f_out(x).mean())\n",
-    "    \n",
-    "    return a #np.array(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "testfile = xr.open_dataset('03_netcdf4.nc')\n",
-    "tmlat = np.array(testfile['lat'])\n",
-    "tmlon = np.array(testfile['lon'])\n",
-    "tmtime = np.array(testfile['time'])\n",
-    "tmld = np.array(testfile['var'])\n",
-    "testfile.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(180, 360, 12)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.shape(tmld)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tmlats,tmlons,tmtimes = np.meshgrid(tmlat,tmlon,tmtime,indexing='ij')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ncfile = netcdf.netcdf_file('MLDClimatology_DeBoyerMontagut/2019_11_07_data_L3_mldmindtr02_c1m_sameasSent2MHRio20141103__Sent2BenjaminPostUcsdBremen/mld_mindtr02_l3.nc', 'r')\n",
-    "\n",
-    "nclat = ncfile.variables['lat'].data.copy()\n",
-    "nclon = ncfile.variables['lon'].data.copy()\n",
-    "nctime = ncfile.variables['time'].data.copy()\n",
-    "ncmld = ncfile.variables['mld_mindtr02_rmoutliers_smth_okrg'].data.copy()\n",
-    "\n",
-    "ncfile.close()\n",
-    "\n",
-    "times, nclats, nclons = np.meshgrid(nctime, nclat, nclon, indexing='ij')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ncfile2 =  xr.open_dataset('LandSeaMask/landmask_GMT15ARC.nc')"
+    "## read the necessary data:"
    ]
   },
   {
@@ -259,6 +82,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ncfile = netcdf.netcdf_file('MLDClimatology_DeBoyerMontagut/2019_11_07_data_L3_mldmindtr02_c1m_sameasSent2MHRio20141103__Sent2BenjaminPostUcsdBremen/mld_mindtr02_l3.nc', 'r')\n",
+    "\n",
+    "nclat = ncfile.variables['lat'].data.copy()\n",
+    "nclon = ncfile.variables['lon'].data.copy()\n",
+    "nctime = ncfile.variables['time'].data.copy()\n",
+    "ncmld = ncfile.variables['mld_mindtr02_rmoutliers_smth_okrg'].data.copy()\n",
+    "\n",
+    "ncfile.close()\n",
+    "\n",
+    "times, nclats, nclons = np.meshgrid(nctime, nclat, nclon, indexing='ij')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
@@ -310,6 +151,127 @@
    ],
    "source": [
     "np.shape(WOAvar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nclandseafile = nclandseafile.persist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.72 ms ± 72.6 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit filterNearestMLD(40,-20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def readWOAdata(filepath,variable):\n",
+    "    TempNCDFfiles = glob.glob(filepath, recursive=True)\n",
+    "    WOAfile = xr.open_mfdataset(TempNCDFfiles,combine='by_coords',decode_times=False, parallel=True)\n",
+    "    WOAdat = WOAfile.sel(nbounds=0)\n",
+    "    return WOAdat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_nearest(array, value):\n",
+    "    \"\"\"this function returns the closest value within an array to the given value\"\"\"\n",
+    "    array = np.asarray(array)\n",
+    "    idx = (np.abs(array - value)).argmin()\n",
+    "    return array[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filterNearestMLD(lat,lon):\n",
+    "    \"\"\"this function checks 1. if lat lon point is in the ocean, then 2. returns MLD climatology\"\"\"\n",
+    "    lsx = nclandseafile.sel(lat=40,lon=-20, method='nearest')['watermask'].values\n",
+    "\n",
+    "    if lsx != 1:\n",
+    "        return np.array([])\n",
+    "    else:\n",
+    "        idx = np.where((nclats == find_nearest(nclat,lat)) & (nclons == find_nearest(nclon,lon)))\n",
+    "        return ncmld[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filterNearestMLD2(lat,lon):\n",
+    "    \"\"\"this function checks 1. if lat lon point is in the ocean, then 2. returns MLD climatology\"\"\"\n",
+    "    lsx = nclandseafile.sel(lat=40,lon=-20, method='nearest')['watermask'].values\n",
+    "\n",
+    "    if lsx != 1:\n",
+    "        return np.array([])\n",
+    "    else:\n",
+    "        idx = np.where((nclats == find_nearest(nclat,lat)) & (nclons == find_nearest(nclon,lon)))\n",
+    "        return ncmld[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filterNearestWOA(lat,lon):\n",
+    "    \"\"\"this function returns nearest WOA data at specific lat/lon\"\"\"\n",
+    "    idx2 = np.where((WOAlats == find_nearest(WOAlat,lat)) & (WOAlons == find_nearest(WOAlon,lon)))\n",
+    "    return np.reshape(WOAvar[idx2],(len(WOAtime),len(WOAdep)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getTempAboveMLD(lat,lon):\n",
+    "    MLDx1 = filterNearestMLD(lat,lon)\n",
+    "    WOAx1 = filterNearestWOA(lat,lon)\n",
+    "    if MLDx1.size==0:\n",
+    "        return [np.nan for i in range(12)]\n",
+    "    \n",
+    "    a = []\n",
+    "    for i in range(0,12):\n",
+    "        if MLDx1[i]>1500:\n",
+    "            MLDx1[i] = 1500\n",
+    "        f_out = interp1d(WOAdep, WOAx1[i])\n",
+    "        x = np.arange(0,MLDx1[i])\n",
+    "        a.append(f_out(x).mean())\n",
+    "    \n",
+    "    return a #np.array(a)"
    ]
   },
   {
