fixed interpolation timing for verification and forcing

--- a/PhytoMFTM/PhytoMFTM/ConvertNCDF4to3.ipynb
+++ b/PhytoMFTM/PhytoMFTM/ConvertNCDF4to3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,20 +85,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n0 = xarray.open_dataset('Nitrate_WOA_tmld_test03_nc3.nc')\n",
-    "#n0.to_netcdf('Nitrate_WOA_tmld_test03_nc3.nc', format='NETCDF3_CLASSIC')"
+    "n0 = xarray.open_dataset('Nitrate_WOA_tmld_test03.nc')\n",
+    "n0.to_netcdf('Nitrate_WOA_tmld_test03_nc3.nc', format='NETCDF3_CLASSIC')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tmld0 = xarray.open_dataset('Temp_WOA_tmld_test02.nc')\n",
+    "tmld0.to_netcdf('Temp_WOA_tmld_test02_nc3.nc', format='NETCDF3_CLASSIC')"
+   ]
   },
   {
    "cell_type": "code",
@@ -717,13 +720,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "mld = xarray.open_dataset('mld_mindtr02_l3.nc')\n",
     "\n",
-    "#mld.to_netcdf('mld_mindtr02_l3_nc3.nc', format='NETCDF3_CLASSIC')"
+    "mld.to_netcdf('mld_mindtr02_l3_nc3.nc', format='NETCDF3_CLASSIC')"
    ]
   },
   {
@@ -750,7 +753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
