Working through Chla & mixing data
Signed-off-by: Benjamin Post <bpost@localhost.localdomain>

--- a/CaRiaco/RegimeShiftNotebooks/HPLC_Pinckney/PLOT_FunctionalGroupBOXPLOT.R.ipynb
+++ b/CaRiaco/RegimeShiftNotebooks/HPLC_Pinckney/PLOT_FunctionalGroupBOXPLOT.R.ipynb
@@ -2028,10 +2028,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "20"
+      ],
+      "text/latex": [
+       "20"
+      ],
+      "text/markdown": [
+       "20"
+      ],
+      "text/plain": [
+       "[1] 20"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "200 *100 / 1000#ng / m2"
+   ]
   },
   {
    "cell_type": "code",
