--- a/OSM2020_poster/01Observations/01_NewModelForcing.ipynb
+++ b/OSM2020_poster/01Observations/01_NewModelForcing.ipynb
@@ -80,7 +80,7 @@
       "\n",
       "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.2.1 ──\n",
       "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.1.1       \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.2  \n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.1.1       \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.3  \n",
       "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 2.1.1       \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 0.8.0.\u001b[31m1\u001b[39m\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 0.8.3       \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0  \n",
       "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 1.3.1       \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.4.0  \n",
@@ -159,49 +159,57 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<thead><tr><th scope=col>X</th><th scope=col>CruiseID</th><th scope=col>Date</th><th scope=col>MLD2015</th><th scope=col>MLD2019</th><th scope=col>x0.1</th><th scope=col>x1</th><th scope=col>x10</th><th scope=col>X21degC</th><th scope=col>X22degC</th></tr></thead>\n",
+       "<caption>A data.frame: 6 × 10</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>X</th><th scope=col>CruiseID</th><th scope=col>Date</th><th scope=col>MLD2015</th><th scope=col>MLD2019</th><th scope=col>x0.1</th><th scope=col>x1</th><th scope=col>x10</th><th scope=col>X21degC</th><th scope=col>X22degC</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;date&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>1         </td><td>93HG_001  </td><td>1995-11-08</td><td>NA        </td><td>24.138    </td><td>NA        </td><td>NA        </td><td>NA        </td><td>130       </td><td>118       </td></tr>\n",
-       "\t<tr><td>2         </td><td>93HG_002  </td><td>1995-12-13</td><td>NA        </td><td>18.103    </td><td>NA        </td><td>NA        </td><td>NA        </td><td>114       </td><td> 94       </td></tr>\n",
-       "\t<tr><td>3         </td><td>93HG_003  </td><td>1996-01-12</td><td>36        </td><td>10.057    </td><td>NA        </td><td>NA        </td><td>NA        </td><td>102       </td><td> 62       </td></tr>\n",
-       "\t<tr><td>4         </td><td>93HG_004  </td><td>1996-02-13</td><td>28        </td><td> 8.046    </td><td>NA        </td><td>NA        </td><td>NA        </td><td> 94       </td><td> 66       </td></tr>\n",
-       "\t<tr><td>5         </td><td>93HG_005  </td><td>1996-03-13</td><td>28        </td><td>10.057    </td><td>NA        </td><td>NA        </td><td>NA        </td><td> 48       </td><td> 24       </td></tr>\n",
-       "\t<tr><td>6         </td><td>93HG_006  </td><td>1996-04-16</td><td>32        </td><td> 7.040    </td><td>NA        </td><td>NA        </td><td>NA        </td><td> 48       </td><td> 26       </td></tr>\n",
+       "\t<tr><th scope=row>193</th><td>202</td><td>93HG_194</td><td>2012-08-14</td><td>15</td><td> 2.98</td><td>NA</td><td>NA</td><td>NA</td><td> 89</td><td> 78</td></tr>\n",
+       "\t<tr><th scope=row>194</th><td>203</td><td>93HG_195</td><td>2012-09-10</td><td>13</td><td> 4.97</td><td>NA</td><td>NA</td><td>NA</td><td>115</td><td>108</td></tr>\n",
+       "\t<tr><th scope=row>195</th><td>204</td><td>93HG_196</td><td>2012-10-10</td><td>12</td><td> 2.98</td><td>NA</td><td>NA</td><td>NA</td><td>122</td><td>116</td></tr>\n",
+       "\t<tr><th scope=row>196</th><td>205</td><td>93HG_197</td><td>2012-11-08</td><td>22</td><td>13.92</td><td>NA</td><td>NA</td><td>NA</td><td>120</td><td>109</td></tr>\n",
+       "\t<tr><th scope=row>197</th><td>206</td><td>93HG_198</td><td>2012-12-04</td><td>NA</td><td>16.90</td><td>NA</td><td>NA</td><td>NA</td><td>114</td><td>101</td></tr>\n",
+       "\t<tr><th scope=row>198</th><td>207</td><td>93HG_199</td><td>2013-03-13</td><td>NA</td><td> 4.97</td><td>NA</td><td>NA</td><td>NA</td><td> 46</td><td> 27</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
+       "A data.frame: 6 × 10\n",
        "\\begin{tabular}{r|llllllllll}\n",
-       " X & CruiseID & Date & MLD2015 & MLD2019 & x0.1 & x1 & x10 & X21degC & X22degC\\\\\n",
+       "  & X & CruiseID & Date & MLD2015 & MLD2019 & x0.1 & x1 & x10 & X21degC & X22degC\\\\\n",
+       "  & <int> & <fct> & <date> & <int> & <dbl> & <dbl> & <dbl> & <dbl> & <int> & <int>\\\\\n",
        "\\hline\n",
-       "\t 1          & 93HG\\_001 & 1995-11-08 & NA         & 24.138     & NA         & NA         & NA         & 130        & 118       \\\\\n",
-       "\t 2          & 93HG\\_002 & 1995-12-13 & NA         & 18.103     & NA         & NA         & NA         & 114        &  94       \\\\\n",
-       "\t 3          & 93HG\\_003 & 1996-01-12 & 36         & 10.057     & NA         & NA         & NA         & 102        &  62       \\\\\n",
-       "\t 4          & 93HG\\_004 & 1996-02-13 & 28         &  8.046     & NA         & NA         & NA         &  94        &  66       \\\\\n",
-       "\t 5          & 93HG\\_005 & 1996-03-13 & 28         & 10.057     & NA         & NA         & NA         &  48        &  24       \\\\\n",
-       "\t 6          & 93HG\\_006 & 1996-04-16 & 32         &  7.040     & NA         & NA         & NA         &  48        &  26       \\\\\n",
+       "\t193 & 202 & 93HG\\_194 & 2012-08-14 & 15 &  2.98 & NA & NA & NA &  89 &  78\\\\\n",
+       "\t194 & 203 & 93HG\\_195 & 2012-09-10 & 13 &  4.97 & NA & NA & NA & 115 & 108\\\\\n",
+       "\t195 & 204 & 93HG\\_196 & 2012-10-10 & 12 &  2.98 & NA & NA & NA & 122 & 116\\\\\n",
+       "\t196 & 205 & 93HG\\_197 & 2012-11-08 & 22 & 13.92 & NA & NA & NA & 120 & 109\\\\\n",
+       "\t197 & 206 & 93HG\\_198 & 2012-12-04 & NA & 16.90 & NA & NA & NA & 114 & 101\\\\\n",
+       "\t198 & 207 & 93HG\\_199 & 2013-03-13 & NA &  4.97 & NA & NA & NA &  46 &  27\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "| X | CruiseID | Date | MLD2015 | MLD2019 | x0.1 | x1 | x10 | X21degC | X22degC |\n",
-       "|---|---|---|---|---|---|---|---|---|---|\n",
-       "| 1          | 93HG_001   | 1995-11-08 | NA         | 24.138     | NA         | NA         | NA         | 130        | 118        |\n",
-       "| 2          | 93HG_002   | 1995-12-13 | NA         | 18.103     | NA         | NA         | NA         | 114        |  94        |\n",
-       "| 3          | 93HG_003   | 1996-01-12 | 36         | 10.057     | NA         | NA         | NA         | 102        |  62        |\n",
-       "| 4          | 93HG_004   | 1996-02-13 | 28         |  8.046     | NA         | NA         | NA         |  94        |  66        |\n",
-       "| 5          | 93HG_005   | 1996-03-13 | 28         | 10.057     | NA         | NA         | NA         |  48        |  24        |\n",
-       "| 6          | 93HG_006   | 1996-04-16 | 32         |  7.040     | NA         | NA         | NA         |  48        |  26        |\n",
+       "A data.frame: 6 × 10\n",
+       "\n",
+       "| <!--/--> | X &lt;int&gt; | CruiseID &lt;fct&gt; | Date &lt;date&gt; | MLD2015 &lt;int&gt; | MLD2019 &lt;dbl&gt; | x0.1 &lt;dbl&gt; | x1 &lt;dbl&gt; | x10 &lt;dbl&gt; | X21degC &lt;int&gt; | X22degC &lt;int&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| 193 | 202 | 93HG_194 | 2012-08-14 | 15 |  2.98 | NA | NA | NA |  89 |  78 |\n",
+       "| 194 | 203 | 93HG_195 | 2012-09-10 | 13 |  4.97 | NA | NA | NA | 115 | 108 |\n",
+       "| 195 | 204 | 93HG_196 | 2012-10-10 | 12 |  2.98 | NA | NA | NA | 122 | 116 |\n",
+       "| 196 | 205 | 93HG_197 | 2012-11-08 | 22 | 13.92 | NA | NA | NA | 120 | 109 |\n",
+       "| 197 | 206 | 93HG_198 | 2012-12-04 | NA | 16.90 | NA | NA | NA | 114 | 101 |\n",
+       "| 198 | 207 | 93HG_199 | 2013-03-13 | NA |  4.97 | NA | NA | NA |  46 |  27 |\n",
        "\n"
       ],
       "text/plain": [
-       "  X CruiseID Date       MLD2015 MLD2019 x0.1 x1 x10 X21degC X22degC\n",
-       "1 1 93HG_001 1995-11-08 NA      24.138  NA   NA NA  130     118    \n",
-       "2 2 93HG_002 1995-12-13 NA      18.103  NA   NA NA  114      94    \n",
-       "3 3 93HG_003 1996-01-12 36      10.057  NA   NA NA  102      62    \n",
-       "4 4 93HG_004 1996-02-13 28       8.046  NA   NA NA   94      66    \n",
-       "5 5 93HG_005 1996-03-13 28      10.057  NA   NA NA   48      24    \n",
-       "6 6 93HG_006 1996-04-16 32       7.040  NA   NA NA   48      26    "
+       "    X   CruiseID Date       MLD2015 MLD2019 x0.1 x1 x10 X21degC X22degC\n",
+       "193 202 93HG_194 2012-08-14 15       2.98   NA   NA NA   89      78    \n",
+       "194 203 93HG_195 2012-09-10 13       4.97   NA   NA NA  115     108    \n",
+       "195 204 93HG_196 2012-10-10 12       2.98   NA   NA NA  122     116    \n",
+       "196 205 93HG_197 2012-11-08 22      13.92   NA   NA NA  120     109    \n",
+       "197 206 93HG_198 2012-12-04 NA      16.90   NA   NA NA  114     101    \n",
+       "198 207 93HG_199 2013-03-13 NA       4.97   NA   NA NA   46      27    "
       ]
      },
      "metadata": {},
@@ -209,7 +217,7 @@
     }
    ],
    "source": [
-    "head(MLD2EuZ)"
+    "tail(MLD2EuZ)"
    ]
   },
   {
