--- a/xarray-simlab-experiments/fastscape_tests.ipynb
+++ b/xarray-simlab-experiments/fastscape_tests.ipynb
@@ -2,37 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import xsimlab as xs\n",
     "import matplotlib.pyplot as plt\n",
-    "import fastscape\n",
+    "#import fastscape\n",
     "import xarray as xr\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "xarray-simlab version:  0.3.0\n",
-      "xarray version:  0.14.0\n",
-      "fastscape version:  0.1.0alpha\n"
+      "xarray-simlab version:  0.3.0+24.gdfced96\n",
+      "xarray version:  0.14.1\n"
      ]
     }
    ],
    "source": [
     "print('xarray-simlab version: ', xs.__version__)\n",
     "print('xarray version: ', xr.__version__)\n",
-    "print('fastscape version: ', fastscape.__version__)"
+    "#print('fastscape version: ', fastscape.__version__)"
    ]
   },
   {
@@ -392,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
