--- a/xarray-simlab-experiments/npzd_xsimlab.ipynb
+++ b/xarray-simlab-experiments/npzd_xsimlab.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,6 +226,23 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.Detritus'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Detritus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "@xs.process\n",
@@ -269,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,8 +728,7 @@
     "            self.time,\n",
     "            rtol=1e-12,\n",
     "            atol=1e-12\n",
-    "        )\n",
-    "       "
+    "        )"
    ]
   },
   {
@@ -724,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -773,24 +789,24 @@
        "    days         [in] ('time',) time in days\n",
        "n\n",
        "    k            [in] half saturation constant\n",
+       "    cb           [in] concentration below mixed layer depth\n",
        "    c0           [in] inital concentration\n",
        "    label        [in] nutrients label\n",
-       "    cb           [in] concentration below mixed layer depth\n",
        "p\n",
+       "    m            [in] mortality rate\n",
+       "    c0           [in] inital concentration\n",
        "    label        [in] phytoplankton label\n",
-       "    m            [in] mortality rate\n",
-       "    c0           [in] inital concentration\n",
        "z\n",
-       "    m2           [in] mortality rate (closure)\n",
-       "    beta         [in] absorption efficiency\n",
-       "    m            [in] mortality rate\n",
-       "    kn           [in] net production efficiency\n",
-       "    c0           [in] inital concentration\n",
        "    k            [in] half saturation constant\n",
+       "    beta         [in] absorption efficiency\n",
+       "    m2           [in] mortality rate (closure)\n",
        "    label        [in] zooplankton label\n",
-       "d\n",
        "    c0           [in] inital concentration\n",
+       "    kn           [in] net production efficiency\n",
+       "    m            [in] mortality rate\n",
+       "d\n",
        "    label        [in] detritus label\n",
+       "    c0           [in] inital concentration\n",
        "    m            [in] remineralisation rate\n",
        "components\n",
        "forcing\n",
@@ -802,16 +818,16 @@
        "    kappa        [in] cross thermocline mixing\n",
        "uptake\n",
        "grazing\n",
-       "    pphyto       [in] grazing preference for phytoplankton\n",
        "    max_rate     [in] maximum ingestion rate\n",
+       "    pphyto       [in] grazing preference for phytoplankton\n",
        "    pdet         [in] grazing preference for detritus\n",
        "grazing_phyto\n",
        "grazing_detritus\n",
        "light\n",
+       "    alpha        [in] initial slope of P-I curve\n",
+       "    v_max        [in] maximum photosynthetic rate\n",
        "    kp           [in] extinction coefficient due to phytoplankton\n",
        "    kw           [in] extinction coefficient due to water\n",
-       "    v_max        [in] maximum photosynthetic rate\n",
-       "    alpha        [in] initial slope of P-I curve\n",
        "n_flux\n",
        "p_flux\n",
        "z_flux\n",
@@ -819,7 +835,7 @@
        "slab"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,29 +891,29 @@
     "    output_vars={\n",
     "        'slab__c': None,  # None is meaningless here but required\n",
     "    }\n",
-    ")\n"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.53 s ± 85.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "9.35 s ± 59.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit in_ds.xsimlab.run(model=npzd_model)"
+    "#%timeit in_ds.xsimlab.run(model=npzd_model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -910,27 +926,27 @@
        "  * time               (time) int64 0 1 2 3 4 5 6 ... 360 361 362 363 364 365\n",
        "  * component          (component) &lt;U1 &#x27;N&#x27; &#x27;P&#x27; &#x27;Z&#x27; &#x27;D&#x27;\n",
        "Data variables:\n",
-       "    z__m2              float64 0.34\n",
-       "    grazing__pphyto    float64 0.67\n",
+       "    z__k               float64 0.6\n",
        "    z__beta            float64 0.69\n",
+       "    light__alpha       float64 0.15\n",
+       "    z__m2              float64 0.34\n",
+       "    p__m               float64 0.2\n",
+       "    n__k               float64 0.85\n",
+       "    z__label           &lt;U1 &#x27;Z&#x27;\n",
+       "    grazing__max_rate  float64 0.8\n",
+       "    grazing__pphyto    float64 0.67\n",
+       "    light__v_max       float64 1.1\n",
+       "    d__label           &lt;U1 &#x27;D&#x27;\n",
+       "    n__cb              float64 15.0\n",
+       "    n__label           &lt;U1 &#x27;N&#x27;\n",
+       "    z__kn              float64 0.75\n",
+       "    z__m               float64 0.1\n",
+       "    grazing__pdet      float64 0.33\n",
+       "    light__kp          float64 0.03\n",
+       "    d__m               float64 0.6\n",
+       "    light__kw          float64 0.05\n",
        "    p__label           &lt;U1 &#x27;P&#x27;\n",
        "    mixing__kappa      float64 0.1\n",
-       "    light__kp          float64 0.03\n",
-       "    z__m               float64 0.1\n",
-       "    n__k               float64 0.85\n",
-       "    d__label           &lt;U1 &#x27;D&#x27;\n",
-       "    grazing__max_rate  float64 0.8\n",
-       "    grazing__pdet      float64 0.33\n",
-       "    z__kn              float64 0.75\n",
-       "    light__kw          float64 0.05\n",
-       "    p__m               float64 0.2\n",
-       "    n__label           &lt;U1 &#x27;N&#x27;\n",
-       "    z__k               float64 0.6\n",
-       "    light__v_max       float64 1.1\n",
-       "    d__m               float64 0.6\n",
-       "    n__cb              float64 15.0\n",
-       "    light__alpha       float64 0.15\n",
-       "    z__label           &lt;U1 &#x27;Z&#x27;\n",
        "    time__days         (time) int64 0 1 2 3 4 5 6 ... 360 361 362 363 364 365\n",
        "    n__c0              float64 15.0\n",
        "    p__c0              float64 0.01\n",
@@ -946,27 +962,27 @@
        "  * time               (time) int64 0 1 2 3 4 5 6 ... 360 361 362 363 364 365\n",
        "  * component          (component) <U1 'N' 'P' 'Z' 'D'\n",
        "Data variables:\n",
-       "    z__m2              float64 0.34\n",
-       "    grazing__pphyto    float64 0.67\n",
+       "    z__k               float64 0.6\n",
        "    z__beta            float64 0.69\n",
+       "    light__alpha       float64 0.15\n",
+       "    z__m2              float64 0.34\n",
+       "    p__m               float64 0.2\n",
+       "    n__k               float64 0.85\n",
+       "    z__label           <U1 'Z'\n",
+       "    grazing__max_rate  float64 0.8\n",
+       "    grazing__pphyto    float64 0.67\n",
+       "    light__v_max       float64 1.1\n",
+       "    d__label           <U1 'D'\n",
+       "    n__cb              float64 15.0\n",
+       "    n__label           <U1 'N'\n",
+       "    z__kn              float64 0.75\n",
+       "    z__m               float64 0.1\n",
+       "    grazing__pdet      float64 0.33\n",
+       "    light__kp          float64 0.03\n",
+       "    d__m               float64 0.6\n",
+       "    light__kw          float64 0.05\n",
        "    p__label           <U1 'P'\n",
        "    mixing__kappa      float64 0.1\n",
-       "    light__kp          float64 0.03\n",
-       "    z__m               float64 0.1\n",
-       "    n__k               float64 0.85\n",
-       "    d__label           <U1 'D'\n",
-       "    grazing__max_rate  float64 0.8\n",
-       "    grazing__pdet      float64 0.33\n",
-       "    z__kn              float64 0.75\n",
-       "    light__kw          float64 0.05\n",
-       "    p__m               float64 0.2\n",
-       "    n__label           <U1 'N'\n",
-       "    z__k               float64 0.6\n",
-       "    light__v_max       float64 1.1\n",
-       "    d__m               float64 0.6\n",
-       "    n__cb              float64 15.0\n",
-       "    light__alpha       float64 0.15\n",
-       "    z__label           <U1 'Z'\n",
        "    time__days         (time) int64 0 1 2 3 4 5 6 ... 360 361 362 363 364 365\n",
        "    n__c0              float64 15.0\n",
        "    p__c0              float64 0.01\n",
@@ -975,7 +991,7 @@
        "    slab__c            (time, component) float64 15.0 0.01 ... 0.002407 0.004502"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1055,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
