push towards Poster OSM 2020

--- a/OSM2020_poster/01Observations/02_CorrelateMixProd.ipynb
+++ b/OSM2020_poster/01Observations/02_CorrelateMixProd.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -73,6 +73,7 @@
       "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
       "✖ dplyr::filter() masks stats::filter()\n",
       "✖ dplyr::lag()    masks stats::lag()\n",
+      "Loading required package: lubridate\n",
       "Loading required package: oce\n",
       "Loading required package: testthat\n",
       "\n",
@@ -97,6 +98,13 @@
     "require(tidyverse, warn.conflicts = FALSE);\n",
     "require(oce)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
